logs/it4i.portal.clients.log
Listing '.'...
Listing './bin'...
Listing './etc'...
Listing './etc/it4i-portal-clients'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Chameleon-3.2.egg-info'...
Listing './lib/python3.5/site-packages/backports'...
Listing './lib/python3.5/site-packages/backports/configparser'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/chameleon'...
Listing './lib/python3.5/site-packages/chameleon/tests'...
Listing './lib/python3.5/site-packages/chameleon/tests/inputs'...
Listing './lib/python3.5/site-packages/chameleon/tests/outputs'...
Listing './lib/python3.5/site-packages/chameleon/zpt'...
Listing './lib/python3.5/site-packages/configparser-3.5.0.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/feedparser-5.2.1.egg-info'...
Listing './lib/python3.5/site-packages/it4i'...
Listing './lib/python3.5/site-packages/it4i/portal'...
Listing './lib/python3.5/site-packages/it4i/portal/clients'...
Listing './lib/python3.5/site-packages/it4i/portal/clients/conf'...
Compiling './lib/python3.5/site-packages/it4i/portal/clients/it4ifree.py'...
***   File "./lib/python3.5/site-packages/it4i/portal/clients/it4ifree.py", line 134
    print tabulate(table_me, table_me_headers)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/it4i/portal/clients/motd_rss.py'...
***   File "./lib/python3.5/site-packages/it4i/portal/clients/motd_rss.py", line 146
    print 'usage:', my_name, '-h|--help'
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/it4i/portal/clients/templates'...
Listing './lib/python3.5/site-packages/it4i.portal.clients-0.6.7.egg-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tabulate-0.8.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
